# casablanca_example_bingrequest

./: CMakeLists.txt  bingrequest.cpp
